fix overflow

--- a/styles/Service.module.scss
+++ b/styles/Service.module.scss
@@ -32,7 +32,6 @@
   text-align: center;
   gap: 5px;
   width: 80%;
-  overflow: hidden;
   h4{
     color: $main;
     font-size: 16px;
